<resources>
    <string name="app_name">Portals Ecommerce</string>
    <string name="title_store">Shop</string>
    <string name="title_product">Product</string>
    <string name="title_help">Help</string>
    <string name="title_cart">Cart</string>
    <string name="title_checkout">Checkout</string>
    <string name="title_profile">Profile</string>
    <string name="product_image_cd">Product Image</string>
    <string name="shop_must_haves_title"><![CDATA[Must Haves, Bestsellers & More]]></string>
    <string name="add_to_cart">Add to cart</string>
    <string name="quantity">Quantity</string>
    <string name="subtotal">Subtotal</string>
    <string name="shipping">Shipping</string>
    <string name="estimated_total">Estimated Total</string>
    <string name="standard_shipping">Standard - Free</string>
    <string name="empty_cart">Your cart is empty</string>
</resources>