<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cart.CartFragment">

    <ScrollView
        android:id="@+id/cart_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/text_view_subtotal_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cart_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </ScrollView>

    <Button
        android:id="@+id/cart_checkout_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="72dp"
        android:text="@string/title_checkout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_view_total_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/estimated_total"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cart_checkout_button"
        app:layout_constraintStart_toStartOf="@+id/cart_checkout_button" />

    <TextView
        android:id="@+id/text_view_shipping_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/shipping"
        app:layout_constraintBottom_toTopOf="@+id/text_view_total_text"
        app:layout_constraintStart_toStartOf="@+id/text_view_total_text" />

    <TextView
        android:id="@+id/text_view_subtotal_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/subtotal"
        app:layout_constraintBottom_toTopOf="@+id/text_view_shipping_text"
        app:layout_constraintStart_toStartOf="@+id/text_view_shipping_text" />

    <TextView
        android:id="@+id/text_view_subtotal_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@+id/text_view_subtotal_text"
        app:layout_constraintEnd_toEndOf="@+id/text_view_shipping_value" />

    <TextView
        android:id="@+id/text_view_shipping_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@+id/text_view_shipping_text"
        app:layout_constraintEnd_toEndOf="@+id/text_view_total_value" />

    <TextView
        android:id="@+id/text_view_total_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_total_text"
        app:layout_constraintEnd_toEndOf="@+id/cart_checkout_button" />

</androidx.constraintlayout.widget.ConstraintLayout>